[gd_scene load_steps=4 format=3 uid="uid://dju6144cx18sx"]

[ext_resource type="PackedScene" uid="uid://bu0fddx8ifwlc" path="res://Scenes/Game Objects/Game Timer.tscn" id="1_6nyx5"]
[ext_resource type="Script" uid="uid://dv2km1wn3ocr4" path="res://Scripts/reaction_game.gd" id="1_h5ng6"]
[ext_resource type="PackedScene" uid="uid://t7xj8pqddmro" path="res://Scenes/Game Objects/Correct Incorrect Display.tscn" id="2_sbvj6"]

[node name="ReactionGame" type="Node2D"]
script = ExtResource("1_h5ng6")
cycle_timer = 1.0
win_score = 10
lose_score = 3

[node name="GameTimer" parent="." instance=ExtResource("1_6nyx5")]

[node name="CorrectIncorrectDisplay" parent="." instance=ExtResource("2_sbvj6")]

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 596.0
offset_top = 64.0
offset_right = 1264.0
offset_bottom = 163.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_constants/outline_size = 15
theme_override_constants/shadow_offset_y = 8
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/bold_italics_font_size = 64
theme_override_font_sizes/italics_font_size = 64
theme_override_font_sizes/mono_font_size = 64
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/bold_font_size = 64
text = "Reaction Game 1/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Current Card" type="RichTextLabel" parent="."]
offset_left = 767.0
offset_top = 907.0
offset_right = 1435.0
offset_bottom = 1021.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_constants/outline_size = 18
theme_override_constants/shadow_offset_y = 10
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/bold_italics_font_size = 80
theme_override_font_sizes/italics_font_size = 80
theme_override_font_sizes/mono_font_size = 80
theme_override_font_sizes/normal_font_size = 80
theme_override_font_sizes/bold_font_size = 80
text = "Current Card"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentCard" type="Sprite2D" parent="."]
position = Vector2(1626, 818.182)
scale = Vector2(0.845, 0.845)

[node name="CentreCard" type="TextureButton" parent="."]
offset_left = 792.0
offset_top = 314.0
offset_right = 1098.0
offset_bottom = 780.0

[node name="Instructions" type="RichTextLabel" parent="."]
offset_left = 43.0
offset_top = 335.0
offset_right = 711.0
offset_bottom = 735.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_constants/outline_size = 18
theme_override_constants/shadow_offset_y = 10
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/bold_italics_font_size = 80
theme_override_font_sizes/italics_font_size = 80
theme_override_font_sizes/mono_font_size = 80
theme_override_font_sizes/normal_font_size = 80
theme_override_font_sizes/bold_font_size = 80
text = "Tap when the cards match"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CentreCardTimer" type="Timer" parent="."]

[connection signal="pressed" from="CentreCard" to="." method="_on_CentreCardButton_pressed"]
[connection signal="timeout" from="CentreCardTimer" to="." method="_on_centre_card_timer_timeout"]
